#9495 alert관련 함수 정리 및 적용
- alert 관련 함수를 alert-alice.js로 이동
- 변수명 변경과 이에 따른 기존 적용 코드 전체 수정 (aliceJs > aliceAlert)

--- a/src/main/resources/public/template/board/boardArticlesEdit.html
+++ b/src/main/resources/public/template/board/boardArticlesEdit.html
@@ -257,7 +257,7 @@
                 contentType: 'application/json',
                 callbackFunc: function(response) {
                     if (method === 'put' || method === 'post' || method === 'delete') {
-                        aliceJs.alertSuccess(resultMsg, function () {
+                        aliceAlert.alertSuccess(resultMsg, function () {
                             searchBoard();
                         });
                     } else if (method === 'get') {
