--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -109,7 +109,7 @@
                 params: JSON.stringify(data),
                 contentType: 'application/json',
                 callbackFunc: function() {
-                    aliceJs.alertSuccess(resultMsg, function() {
+                    aliceAlert.alertSuccess(resultMsg, function() {
                         location.href = '/downloads/search';
                     });
                 }
