--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -54,7 +54,7 @@
             // 게시물 삭제 처리 시, validation 체크.
             const noticeNo = /*[[${notice.noticeNo}]]*/;
             if (noticeNo === null) {
-                aliceJs.alertWarning(i18n.msg('common.msg.delete'));
+                aliceAlert.alertWarning(i18n.msg('common.msg.delete'));
                 return history.go(-1);
             }
             portalFileUploader.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true}});
