--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -74,7 +74,7 @@
 
             // fileTemplate가 동적으로 생기고 존재여부로 파일 업로드를 체크하기 때문에 isEmpty 함수를 사용하기 어려움.
             if (document.getElementById('dropZoneFileUpload') !== null && document.getElementById('fileTemplate') === null) {
-                aliceJs.alertWarning(i18n.msg('process.msg.selectImportFile'));
+                aliceAlert.alertWarning(i18n.msg('process.msg.selectImportFile'));
                 return false;
             }
             return true;
@@ -96,7 +96,7 @@
                     processInfo.processId = processId;
                     processInfo.processStatus = isDestroy ? STATUS_DESTROY : document.getElementById('process_status').value;
                     isEnabled ? restSubmit('PUT', '/rest/processes/' + processId, processInfo)
-                        : aliceJs.alertWarning(i18n.msg('process.msg.failedDestroy'));
+                        : aliceAlert.alertWarning(i18n.msg('process.msg.failedDestroy'));
                 }
             }
         }
@@ -104,7 +104,7 @@
         // 프로세스 삭제
         function deleteProcess(processId) {
             aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/process/' + processId, function() {
-                aliceJs.alertSuccess('[[#{common.msg.delete}]]', function() {
+                aliceAlert.alertSuccess('[[#{common.msg.delete}]]', function() {
                     window.close();
                 });
             });
