--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -64,7 +64,7 @@
             if (element.id === 'fromDt') {
                 const toDtValue = document.getElementById('searchToDt').value;
                 if (i18n.systemDate(toDtValue) < i18n.systemDate(element.value)) {
-                    aliceJs.alertWarning(i18n.msg("common.msg.selectBeforeDate", toDtValue), function() {
+                    aliceAlert.alertWarning(i18n.msg("common.msg.selectBeforeDate", toDtValue), function() {
                         picker.open();
                     });
                 } else {
@@ -73,7 +73,7 @@
             } else {
                 const fromDtValue = document.getElementById('fromDt').value;
                 if (i18n.systemDate(fromDtValue) > i18n.systemDate(element.value)) {
-                    aliceJs.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function() { picker.open(); });
+                    aliceAlert.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function() { picker.open(); });
                 } else {
                     getBoardList(false);
                 }
