--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -65,7 +65,7 @@
             // 게시물 삭제 처리 시, validation 체크.
             const noticeNo = /*[[${notice.noticeNo}]]*/;
             if (noticeNo === null) {
-                aliceJs.alertWarning(i18n.msg('notice.msg.alreadyDeleted'));
+                aliceAlert.alertWarning(i18n.msg('notice.msg.alreadyDeleted'));
                 return history.go(-1);
             }
             fileUploader.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true}});
