--- a/src/main/resources/public/template/process/processAttachFileView.html
+++ b/src/main/resources/public/template/process/processAttachFileView.html
@@ -54,7 +54,7 @@
         // image 미선택 시 알림창 출력
         const selectedImage = document.querySelector('.thumbnail.selected');
         if (!selectedImage) {
-            aliceJs.alertWarning(i18n.msg('form.msg.fileSelect'));
+            aliceAlert.alertWarning(i18n.msg('form.msg.fileSelect'));
             return false;
         }
         if (window.opener && !window.opener.closed) {
