--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -253,13 +253,13 @@
             if (flag === 'post') {
                 for(let i = 0; i < roleIds.length; i++) {
                     if (document.getElementById('txtRoleId').value === roleIds[i]) {
-                        aliceJs.alertWarning([[#{role.msg.duplicateRoleId}]]);
+                        aliceAlert.alertWarning([[#{role.msg.duplicateRoleId}]]);
                         return;
                     }
                 }
                 for(let i = 0; i < roleNames.length; i++) {
                     if (document.getElementById('txtRoleName').value === roleNames[i]) {
-                        aliceJs.alertWarning([[#{role.msg.duplicateRoleName}]]);
+                        aliceAlert.alertWarning([[#{role.msg.duplicateRoleName}]]);
                         return;
                     }
                 }
@@ -267,7 +267,7 @@
                 if (isNotEquals('txtRoleName', 'txtRoleNameOrg')) {
                     for(let i = 0; i < roleNames.length; i++) {
                         if (document.getElementById('txtRoleName').value === roleNames[i]) {
-                            aliceJs.alertWarning([[#{role.msg.duplicateRoleName}]]);
+                            aliceAlert.alertWarning([[#{role.msg.duplicateRoleName}]]);
                             return;
                         }
                     }
@@ -285,7 +285,7 @@
             });
 
             if (arrAuthId.length === 0) {
-                aliceJs.alertWarning([[#{role.msg.selectAuth}]]);
+                aliceAlert.alertWarning([[#{role.msg.selectAuth}]]);
                 return;
             }
 
@@ -300,7 +300,7 @@
                 params: JSON.stringify(obj),
                 contentType: 'application/json',
                 callbackFunc: function () {
-                    aliceJs.alertSuccess([[#{common.msg.save}]], function() {
+                    aliceAlert.alertSuccess([[#{common.msg.save}]], function() {
                         window.location.href = '/roles/edit';
                     });
                 }
@@ -316,15 +316,15 @@
                     callbackFunc: function(response) {
                         switch (response.responseText) {
                             case "true":
-                                aliceJs.alertSuccess([[#{common.msg.delete}]], function() {
+                                aliceAlert.alertSuccess([[#{common.msg.delete}]], function() {
                                     window.location.href = '/roles/edit';
                                 });
                                 break;
                             case "false":
-                                aliceJs.alertDanger(i18n.msg('common.label.delete') + i18n.msg('common.label.blank') + i18n.msg('common.msg.fail'));
+                                aliceAlert.alertDanger(i18n.msg('common.label.delete') + i18n.msg('common.label.blank') + i18n.msg('common.msg.fail'));
                                 break;
                             default :
-                                aliceJs.alertDanger([[#{common.msg.fail}]]);
+                                aliceAlert.alertDanger([[#{common.msg.fail}]]);
                                 break;
                         }
                     }
