#9389 - 태그 대상 테이블 변경 및 패키지 정리

--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -193,8 +193,9 @@
 
         function onAddTag(tag) {
             const jsonData = {
-                tagContent: tag.detail.data.value,
-                instanceId: '[[${instanceId}]]'
+                tagType: 'instance',
+                tagValue: tag.detail.data.value,
+                targetId: '[[${instanceId}]]'
             };
             restSubmit('POST', '/rest/tags', function () {
                 location.reload();
