#9495 alert관련 함수 정리 및 적용
- alert 관련 함수를 alert-alice.js로 이동
- 변수명 변경과 이에 따른 기존 적용 코드 전체 수정 (aliceJs > aliceAlert)

--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -130,7 +130,7 @@
 
         //게시판 삭제
         function deleteBoard(method) {
-            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete',
+            aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete',
                 '/rest/boards/articles/' + boardId);
         }
 
