--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -153,7 +153,7 @@
                     restSubmit(method, url, data);
                 }
             } else if (method === 'delete') {
-                aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/cmdb/attributes/' + /*[[${attribute?.attributeId}]]*/'');
+                aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/cmdb/attributes/' + /*[[${attribute?.attributeId}]]*/'');
             }
         }
 
