--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -124,7 +124,7 @@
                     restSubmit('put', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
                 });
                 document.getElementById('btnDelete').addEventListener('click', function () {
-                    aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
+                    aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
                 });
             }
             OverlayScrollbars(document.querySelector('.edit'), { className: 'scrollbar' });
