--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -101,7 +101,7 @@
 
         // 폼 삭제
         function deleteForm(formId) {
-            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/form/' + formId, function(result) {
+            aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/form/' + formId, function(result) {
                 if (result === 'true') {
                     aliceAlert.alertSuccess('[[#{common.msg.delete}]]', function() {
                         location.reload();
