--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -246,7 +246,7 @@
                     restSubmit(method, url, data);
                 }
             } else if (method === 'delete') {
-                aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/schedulers/' + /*[[${schedule?.taskId}]]*/'');
+                aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/schedulers/' + /*[[${schedule?.taskId}]]*/'');
             }
         }
 
