--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -117,7 +117,7 @@
                 }
 
                 if (document.getElementById('prev-document-status').value === STATUS_TEMPORARY && documentInfo.documentStatus === STATUS_USE) { // 수정
-                    aliceJs.confirmIcon(
+                    aliceAlert.confirmIcon(
                         i18n.msg('document.msg.changeStatusEnabled'),
                         () => restSubmit(method, url + '?isDeleteData=true', documentInfo, function(result) {
                             aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function() {
@@ -420,7 +420,7 @@
         }
 
         function deleteDocument(documentId) {
-            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/workflows/' +
+            aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/workflows/' +
                 documentId, {}, function(result) {
                 if (JSON.parse(result)) {
                     aliceJs.alertSuccess('[[#{common.msg.delete}]]', function() {
