--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -336,7 +336,7 @@
                         });
                         return true;
                     } else {
-                        aliceJs.alertDanger(i18n.msg('common.label.fail'));
+                        aliceAlert.alertDanger(i18n.msg('common.label.fail'));
                         return false;
                     }
                 });
