--- a/src/main/resources/public/template/certification/status.html
+++ b/src/main/resources/public/template/certification/status.html
@@ -90,7 +90,7 @@
             url: url,
             params: new FormData(document.getElementById("sendForm")),
             callbackFunc: function() {
-                aliceJs.alertWarning(i18n.msg('authentication.msg.resentAuthentication') + '\n' + i18n.msg('authentication.msg.emailCheck'));
+                aliceAlert.alertWarning(i18n.msg('authentication.msg.resentAuthentication') + '\n' + i18n.msg('authentication.msg.emailCheck'));
             }
         };
         aliceJs.sendXhr(opt)
