--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -411,7 +411,7 @@
                 params: displayJson,
                 contentType: 'application/json',
                 callbackFunc: function () {
-                    aliceJs.alertSuccess(i18n.msg('common.msg.save'), function() {
+                    aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function() {
                         location.reload();
                     });
                 }
@@ -423,11 +423,11 @@
             aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/workflows/' +
                 documentId, {}, function(result) {
                 if (JSON.parse(result)) {
-                    aliceJs.alertSuccess('[[#{common.msg.delete}]]', function() {
+                    aliceAlert.alertSuccess('[[#{common.msg.delete}]]', function() {
                         location.reload();
                     });
                 } else {
-                    aliceJs.alertWarning('[[#{document.msg.launchedInstance}]]');
+                    aliceAlert.alertWarning('[[#{document.msg.launchedInstance}]]');
                 }
             }, false);
         }
