--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -38,7 +38,7 @@
                             <input type="text" id="userId" name="userId" maxlength="100" th:value="${users?.userId}"
                                    required="required"/>
                         </div>
-                        <div class="flex-column edit-row">
+                        <div class="flex-column edit-row" th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
                             <label for="password">
                                 <span th:text="#{user.label.password}"></span>
                                 <span class="required"></span>
@@ -52,7 +52,7 @@
                             <input type="password" id="password" name="password" maxlength="100"
                                    autocomplete="new-password" required="required"/>
                         </div>
-                        <div class="flex-column edit-row">
+                        <div class="flex-column edit-row" th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
                             <label for="rePassword">
                                 <span th:text="#{user.label.rePassword}"></span>
                                 <span class="required"></span>
@@ -68,7 +68,7 @@
                             <input id="userName" name="userName" th:value="${users?.userName}" maxlength="100"
                                    required="required"/>
                         </div>
-                        <div class="flex-column edit-row">
+                        <div class="flex-column edit-row" th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
                             <label for="email">
                                 <span th:text="#{user.label.email}"></span>
                                 <span class="required"></span>
