--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -43,13 +43,16 @@
         /*<![CDATA[*/
         const boardAdminId = /*[[${boardAdminId}]]*/ null;
         let offsetCount = 0;
+        let searchFromDt = i18n.getDate({'months': -1});
+        let searchToDt = i18n.getDate();
+
         window.onload = function() {
             document.getElementById('search').focus();
             if (boardAdminId !== null) {
                 document.getElementById('boardAdminId').value = boardAdminId;
             }
-            document.getElementById('fromDt').value = i18n.getDate({'months':-1});
-            document.getElementById('searchToDt').value = i18n.getDate();
+            document.getElementById('fromDt').value = searchFromDt;
+            document.getElementById('searchToDt').value = searchToDt;
             dateTimePicker.initDatePicker('fromDt', setDatePicker);
             dateTimePicker.initDatePicker('searchToDt', setDatePicker);
             document.getElementById('boardAdminId').addEventListener('change', function() { getBoardList(false); });
@@ -65,6 +68,7 @@
                 const toDtValue = document.getElementById('searchToDt').value;
                 if (i18n.systemDate(toDtValue) < i18n.systemDate(element.value)) {
                     aliceAlert.alertWarning(i18n.msg("common.msg.selectBeforeDate", toDtValue), function() {
+                        document.getElementById('fromDt').value = searchFromDt;
                         picker.open();
                     });
                 } else {
@@ -73,7 +77,10 @@
             } else {
                 const fromDtValue = document.getElementById('fromDt').value;
                 if (i18n.systemDate(fromDtValue) > i18n.systemDate(element.value)) {
-                    aliceAlert.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function() { picker.open(); });
+                    aliceAlert.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function() {
+                        document.getElementById('searchToDt').value = searchToDt;
+                        picker.open();
+                    });
                 } else {
                     getBoardList(false);
                 }
